
fixed a bug in which, when switching from desktop mode to preview mode
with autopreview off, you could end up opening a new window with the enter 
key instead of just showing the message in the preview pane.

fixed a minor bug in which clearing a preview-pane mode message with a 
custom theme would result in the message flashing for a moment with a 
default font.

made it so selecting or scrolling in a messagepanel will remove the
new message icon.

optimized IMAP folder loading so that we initially fetch the SEEN flag,
and then pre-fetch the messages we'll actually display (by loading around
the getFirstUnreadMessage() value)

fixed notifyNewMessagesMain and Node so that they actually work.

added a button for using custom headers on an outgoing mail message.

fixed editor display of boolean properties in Folder editor.

worked around a sun bug in jdk1.4 which would result in the 
FolderSelectorPane being empty the first time it was brought up.

updated printing to use the new jdk 1.4 printing system.  also made 
printing, err, work correctly now.

added Bounce Message command, plus a BounceMessage filter.

modified the sendMessageList of the NewMessageInfo to use a sendMessageMap
instead.

added a configurable spam button.

changed the default action of the FolderSelectorPane to be only subscribed
folders.  this also fixes an exception you could get when trying to edit
filters while disconnected from an IMAP server.

040128 release
--------------

added support for S/MIME and OpenPGP encryption.

fixed a bug in which the new message notification didn't appear immediately
on the FolderNode.

fixed a case where hitting 'send' twice could end up sending two copies
of the message.

fixed toolbar button margins in jdk 1.4.2.

modified the attachment filechooser to select for multiple files, now that
that's supported in swing.

added status messages while sending new messages.  this is to make sure that
users always know what the status of their outgoing messages is.
